--- a/gistsTest/pom.xml
+++ b/gistsTest/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>gisttest</groupId>
+  <groupId>payconiq</groupId>
   <artifactId>gists</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
@@ -14,22 +14,5 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-<dependency>
-  <groupId>io.rest-assured</groupId>
-  <artifactId>rest-assured</artifactId>
-  <version>4.2.0</version>
-</dependency>
-<dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
-</dependency>
-
-<dependency>
-            <groupId>com.github.scribejava</groupId>
-            <artifactId>scribejava-apis</artifactId>
-            <version>2.5.3</version>
-            <scope>test</scope>
-</dependency>
   </dependencies>
 </project>
